--- a/.github/molecule.yml
+++ b/.github/molecule.yml
@@ -1,8 +1,11 @@
 ---
-name: CI
-'on':
-  pull_request:
+on:
+  # Trigger the workflow on push or pull request,
+  # but only for the main branch
   push:
+    branches:
+      - master
+  pull_request:
     branches:
       - master
   schedule:
