--- a/.github/molecule.yml
+++ b/.github/molecule.yml
@@ -8,8 +8,8 @@ on:
   pull_request:
     branches:
       - master
-  schedule:
-    - cron: "30 2 * * 1"
+ # schedule:
+  #  - cron: "30 2 * * 1"
 
 jobs:
 
